--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^1.0.4
+  image_picker_web: ^3.1.1
+  # ... dependencies lainnya
 
 
   # The following adds the Cupertino Icons font to your application.
